<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="pl.damrad.marvelcomicsapp.fragments.LoginFragment" />

        <variable
            name="userVM"
            type="pl.damrad.marvelcomicsapp.viewmodels.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <ImageView
            android:id="@+id/bannerIV"
            android:layout_width="@dimen/bannerLogo"
            android:layout_height="@dimen/bannerLogo"
            android:layout_marginStart="@dimen/banner_margin"
            android:layout_marginTop="@dimen/banner_margin"
            android:layout_marginEnd="@dimen/banner_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/shield"
            app:layout_constraintBottom_toTopOf="@+id/welcomeTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/welcomeTV"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_title_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/welcomeMarvelApp"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inputText_margin"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:fontFamily="@font/roboto_light"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inputText_margin"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_open_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/restorePassBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="wrap_content"
            android:onClick="@{() -> userVM.restorePassword(emailET.getText().toString())}"
            android:text="@string/restore_password"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/passwordTextField"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_btn_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login"
            android:onClick="@{() -> userVM.signIn(emailET.getText().toString(), passwordET.getText().toString())}"
            app:layout_constraintBottom_toTopOf="@+id/createNewAccountBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restorePassBtn"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/createNewAccountBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginBottom="@dimen/create_new_acc_btn_margin"
            android:onClick="@{() -> fragment.navigateToRegistration()}"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>