<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logoutBtn"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>