<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/comicsFragment"
        android:icon="@drawable/awesome_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/awesome_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>